--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Get the release assets info
         uses: kennylindley/get-release-info@master
+        with:
+          matching_regex: "(?:Simple-In-Out-)[0-9]+\.[0-9]+\.[0-9]+\.(?:dmg|exe)"
         id: get_info
 
       - name: "Configure AWS credentials"
