Add an echo to get the urls for debugging

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: "Download files using the release URLs received earlier"
         run: |
+          echo ${{ steps.get_info.outputs.urls }}
           for i in $(echo ${{ steps.get_info.outputs.urls }} | sed "s/,/ /g")
           do
             curl "$i"
