--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Get the release assets info
         uses: kennylindley/get-release-info@master
-        with:
-          matching_regex: ^(?:Simple-In-Out-)[0-9]+\.[0-9]+\.[0-9]+\.(?:dmg|exe)$
         id: get_info
 
       - name: "Configure AWS credentials"
@@ -24,7 +22,7 @@ jobs:
 
       - name: "Download files using the release URLs received earlier"
         run: |
-          "echo ${{ steps.get_info.outputs.urls }}"
+          echo ${{ steps.get_info.outputs.urls }}
           for i in $(echo ${{ steps.get_info.outputs.urls }} | sed "s/,/ /g")
           do
             curl "$i"
