Comp 12 GitHub workflow (#4)
* Update the action.yml and move the get-release-info action into this repo

* Remove the requirement to checkin a built project

* Move the other two AWS variables to retrieve from secrets

* Always upload to the same directory and delete old files on upload

* Cleanup package.json

* Move to actually run testing and coverage on github with actions

* Update the readme for badges

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,16 +9,30 @@ jobs:
     name: Uploading
     runs-on: "ubuntu-latest"
     steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      - name: Install dependencies
+        uses: borales/actions-yarn@v2.1.0
+        with:
+          cmd: install
+
       - name: Get the release assets info
-        uses: kennylindley/get-release-info@master
+        uses: node12
+        main: src/index.js
         id: get_info
 
       - name: "Configure AWS credentials"
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_SECRET_KEY_ID}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: "Download files using the release URLs received earlier"
         run: |
@@ -28,6 +42,6 @@ jobs:
           done
 
       - name: "Copy file to S3 bucket"
-        run: "aws s3 sync . s3://$AWS_S3_BUCKET/${{ steps.get_info.outputs.version }}"
+        run: "aws s3 sync --delete . s3://$AWS_S3_BUCKET/desktop/latest"
         env:
-          AWS_S3_BUCKET: simpleinout-releases
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
