Comp 12 GitHub workflow (#6)
* Update the action.yml and move the get-release-info action into this repo

* Remove the requirement to checkin a built project

* Update the readme for badges

* Added an eslintrc

* Got linting working

* Simplified the code with a map function

* updated the test action

* Change the test repo to only run on pull requests to the master branch

* Removed output for version and updated tests

* Found a mispelling

* Change dependencies

* Added tests for pr updates

* Update the actions

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Get the release assets info
         uses: node12
-        main: src/index.js
+        main: src/main.js
         id: get_info
 
       - name: "Configure AWS credentials"
