--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@actions/core": "^1.0.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.4",
-    "eslint": "^5.13.0",
+    "eslint": "^6.3.0",
     "eslint-config-simplymadeapps": "^1.5.2",
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1"
   }
 }
