Got rid of a couple of linting rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,3 @@
 {
-  "extends": "simplymadeapps",
-  "rules": {
-    "jsdoc/require-jsdoc": "off",
-    "no-var": "off"
-  }
+  "extends": "simplymadeapps"
 }
