--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -41,8 +41,9 @@ jobs:
           do
             curl -O -L $i
           done
+          for FILE in Simple-In-Out*.*; do mv $FILE ${FILE%-*}.${FILE##*.};done
 
       - name: "Copy file to S3 bucket"
-        run: "aws s3 sync --delete . s3://$AWS_S3_BUCKET/desktop/latest"
+        run: "aws s3 sync --delete ./latest s3://$AWS_S3_BUCKET/desktop/latest"
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
