COMP-172 Change the release mechanism (#8)
* Comp 12 troubleshooting actions (#11)

* Update the action.yml and move the get-release-info action into this repo

* Remove the requirement to checkin a built project

* Update the readme for badges

* Update the test-reporter-id and badges in the readme

* Got rid of a couple of linting rules

* Take steps to build on TravisCI

* Update the tests and made the action set the failed flag if the file is not present, for some reason.

* Updated the readme with the new build status

* Added a .nvmrc for TravisCI

* Fixed linting errors

* Update to the version of node that is used by GitHub

* Mocking function now restores after the tests. Same with environment variables.

* Troubleshooting the action

* Change to modify the directory and filename

* Update for version numbers and directory

* Automatically make the files public-read

Co-authored-by: Brian Pattison <brian@brianpattison.com>
Co-authored-by: Kenny Lindley <kennylindley@Kennys-MacBook-Pro.local>

* Copy files rather than rename them.

* Update to remove pkgs

Co-authored-by: Brian Pattison <brian@brianpattison.com>
Co-authored-by: Kenny Lindley <kennylindley@Kennys-MacBook-Pro.local>

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -41,7 +41,7 @@ jobs:
           do
             curl -O -L $i
           done
-          for FILE in Simple-In-Out*.*; do mv $FILE ${FILE%-*}.${FILE##*.};done
+          for FILE in Simple-In-Out*.exe; do cp $FILE ${FILE%-*}.${FILE##*.};done
 
       - name: "Copy file to S3 bucket"
         run: "aws s3 sync --acl public-read --delete ./latest s3://$AWS_S3_BUCKET/desktop/latest"
